[package]
name = "diesel"
version = "2.0.0-rc.0"
license = "MIT OR Apache-2.0"
description = "A safe, extensible ORM and Query Builder for PostgreSQL, SQLite, and MySQL"
readme = "README.md"
documentation = "https://docs.rs/diesel/"
homepage = "https://diesel.rs"
repository = "https://github.com/diesel-rs/diesel"
keywords = ["orm", "database", "sql"]
categories = ["database"]
edition = "2018"
rust-version = "1.54.0"

[dependencies]


[dependencies.diesel_derives]
version = "~2.0.0-rc.0"
path = "../diesel_derives"

[dev-dependencies]
cfg-if = "1"
dotenvy = "0.15"
ipnetwork = ">=0.12.2, <0.19.0"
quickcheck = "1.0.3"

[features]


[package.metadata.docs.rs]
features = ["postgres", "mysql", "sqlite", "extras"]
no-default-features = true
rustc-args = ["--cfg", "doc_cfg"]
rustdoc-args = ["--cfg", "doc_cfg"]
